# imgv

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  settings.conf  vcpkg.json
.github/actions/prepare-system/: action.yml
.github/workflows/: clang.yml  clang10.yml  gcc.yml  gcc10.yml  gcc11.yml  msvc.yml  msvc2019.yml
_build/: CMakeCache.txt
inc/: config.h  controller.h  entity_manager.h  log.h  model.h  rect.h  resource_manager.h  sdl_canvas.h  view.h
inc/components/: clickable.h  gold.h  hitpoints.h  position.h  weight.h
inc/components/gui/: button.h
inc/controller/events/: finger_down.h  key_pressed.h  mouse_button_down.h  mouse_motion.h  quit.h  time_tick.h
inc/controller/guards/: is_key.h  is_mobile.h
src/: animation.h  any_of.h  application.cpp  application.h  config.h.in  main.cpp  main_widget.cpp  main_widget.h  settings.h
tests/: CMakeLists.txt  entity_manager.cpp  resource_manager.cpp
